feat: final touches

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <div class="right-content">
             <h1 class="heading">Register here!</h1>
             <form action="" class="form-wrapper">
-                <input type="text" required name="name" placeholder="Apoorva Arora" class="input-field" />
-                <input type="number" min="1" max="30" required name="age" placeholder="24" class="input-field" />
-                <textarea name="message" required cols="30" rows="7" placeholder="Ma'am, I am a huge fan of..."
+                <input type="text" required name="name" placeholder="Jack SRMKZILLA" class="input-field" />
+                <input type="number" min="1" max="30" required name="age" placeholder="3" class="input-field" />
+                <textarea name="message" required cols="30" rows="7" placeholder="When will we get our certificates?"
                     class="input-field"></textarea>
                 <button type="submit" class="submit-btn">Lets go!</button>
             </form>
             <div>
-                <h3>Why to register</h3>
+                <h3 class="register-heading">Why to register</h3>
                 <ul>
                     <li></li>
                     <li></li>
@@ -45,7 +45,7 @@
 
     <footer class="footer">
         <p>
-            Made with love, <a href="https://srmkzilla.net" target="_blank">SRMKZILLA</a>
+            Made with ❤️, <a href="https://srmkzilla.net" target="_blank">SRMKZILLA</a>
         </p>
     </footer>
 </body>
