docs: add comments

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<!-- declares HTMl5 -->
 <!DOCTYPE html>
+
+<!-- begin HTML project -->
 <html lang="en">
+
+<!-- hidden web page properties -->
 
 <head>
     <meta charset="UTF-8">
@@ -9,13 +14,17 @@
     <link rel="icon" href="https://cdn-images-1.medium.com/max/1200/1*V14ZK8_mXQadno4eLtOnIw.png" type="image/gif">
 </head>
 
+<!-- visible content -->
+
 <body>
+    <!-- navigation -->
     <nav class="navbar">
         <figure>
             <img src="./images/SRMKZILLA-logo.png" alt="srmkzilla-logo" width="100px">
         </figure>
     </nav>
 
+    <!-- main content -->
     <main class="modal">
         <div>
             <figure class="image-wrapper">
@@ -23,7 +32,7 @@
             </figure>
         </div>
         <div class="right-content">
-            <h1 class="heading">Register here!</h1>
+            <h1 class="heading">Register for Tech-troduction!</h1>
             <form action="" class="form-wrapper">
                 <input type="text" required name="name" placeholder="Jack SRMKZILLA" class="input-field" />
                 <input type="number" min="1" max="30" required name="age" placeholder="3" class="input-field" />
@@ -34,10 +43,10 @@
             <div>
                 <h3 class="register-heading">Why to register</h3>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Get familiarised with the tech industry</li>
+                    <li>See what various domains have to offer</li>
+                    <li>Free swags and certificates!</li>
+                    <li>We are awesome, and so are you</li>
                 </ul>
             </div>
         </div>
